added project links and background color

--- a/index.html
+++ b/index.html
@@ -1,3 +1,54 @@
-Under Construction
+<!DOCTYPE html>
+<html lang="en">
 
-GitHub: https://github.com/MichaelCraig7
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <title>Michael Craig - Portfolio</title>
+</head>
+
+<body>
+    <h1>UNDER CONSTRUCTION</h1>
+    <h1>Projects</h1>
+    <div>
+        <ul>
+            <div class='pOne'>
+                <li>
+                    Project 1:
+                    <a href="https://github.com/MichaelCraig7/SimonGame">Info</a>
+                    <ul>
+                        <li>
+                            <a href="http://obeysimon.bitballoon.com/">Live Site</a>
+                        </li>
+                    </ul>
+                </li>
+            </div>
+            <div class='pTwo'>
+                <li>
+                    Project 2:
+                    <a href="https://github.com/MichaelCraig7/suspicion-tracker">Info</a>
+                    <ul>
+                        <li>
+                            <a href="https://evening-mesa-87101.herokuapp.com/">Live Site</a>
+                        </li>
+                    </ul>
+                </li>
+            </div>
+            <div class='pThree'>
+                <li>
+                    Project 3:
+                    <a href="https://github.com/MichaelCraig7/MusicList">Info</a>
+                    <ul>
+                        <li>
+                            <a href="https://p3musiclist.herokuapp.com/">Live Site</a>
+                        </li>
+                    </ul>
+                </li>
+            </div>
+        </ul>
+    </div>
+</body>
+
+</html>
