waves looking better

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <div class='wrapper'>
-        
+
         <div class='title'>
             <div>
                 <p>UNDER CONSTRUCTION</p>
@@ -36,8 +36,8 @@
                         <h5>Obey Simon</h5>
                     </div>
                     <div class='p1Buttons'>
-                        <a class="waves-effect waves-light btn" href="https://github.com/MichaelCraig7/SimonGame">Info</a>
-                        <a class="waves-effect waves-light btn" href="http://obeysimon.bitballoon.com/">Live Site</a>
+                        <a class="pBtn1 waves-effect waves-light btn" href="https://github.com/MichaelCraig7/SimonGame">Info</a>
+                        <a class="pBtn2 waves-effect waves-light btn" href="http://obeysimon.bitballoon.com/">Live Site</a>
                     </div>
                     <img src="/project_images/p1_img.png" alt="Project 1 Image">
                 </div>
@@ -48,8 +48,8 @@
                         <h5>Suspicion Tracker</h5>
                     </div>
                     <div class='p2Buttons'>
-                        <a class="waves-effect waves-light btn" href="https://github.com/MichaelCraig7/suspicion-tracker">Info</a>
-                        <a class="waves-effect waves-light btn" href="https://evening-mesa-87101.herokuapp.com/">Live Site</a>
+                        <a class="pBtn1 waves-effect waves-light btn" href="https://github.com/MichaelCraig7/suspicion-tracker">Info</a>
+                        <a class="pBtn2 waves-effect waves-light btn" href="https://evening-mesa-87101.herokuapp.com/">Live Site</a>
                     </div>
                     <img src="/project_images/p2_img.png" alt="Project 2 Image">
                 </div>
@@ -60,8 +60,8 @@
                         <h5>Music List</h5>
                     </div>
                     <div class='p3Buttons'>
-                        <a class="waves-effect waves-light btn" href="https://github.com/MichaelCraig7/MusicList">Info</a>
-                        <a class="waves-effect waves-light btn" href="https://p3musiclist.herokuapp.com/">Live Site</a>
+                        <a class="pBtn1 waves-effect waves-light btn" href="https://github.com/MichaelCraig7/MusicList">Info</a>
+                        <a class="pBtn2 waves-effect waves-light btn" href="https://p3musiclist.herokuapp.com/">Live Site</a>
                     </div>
                     <img src="/project_images/p3_img.png" alt="Project 3 Image">
                 </div>
