temp font for name

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
             font-family: OCRA;
             src: url('/fonts/OCRAEXT.TTF');
         }
-    </style>
+        </style>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
     <title>Michael Craig - Portfolio</title>
 </head>
 
@@ -24,7 +25,7 @@
             <div>
                 <p>UNDER CONSTRUCTION</p>
                 <h1 class='titleName'>Michael Craig</h1>
-                <h5 class='titleDev'>{Full-Stack Developer}</h5>
+                <h5 class='titleDev'>Full-Stack Developer</h5>
             </div>
             <p>Projects</p>
         </div>
