updated fonts and colors

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </style>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Enriqueta|Sacramento" rel="stylesheet">
     <title>Michael Craig - Portfolio</title>
 </head>
 
@@ -25,7 +25,7 @@
             <div>
                 <p>UNDER CONSTRUCTION</p>
                 <h1 class='titleName'>Michael Craig</h1>
-                <h5 class='titleDev'>Full-Stack Developer</h5>
+                <h5 class='titleDev'>A Full-Stack Web Developer</h5>
             </div>
             <p>Projects</p>
         </div>
