added p4 and tech info for each project

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             font-family: OCRA;
             src: url('/fonts/OCRAEXT.TTF');
         }
-        </style>
-    <link rel="stylesheet" href="style.css">
+    </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Enriqueta|Sacramento" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Michael Craig - Portfolio</title>
 </head>
 
@@ -35,9 +35,10 @@
                 <div class=p1Inner>
                     <div class='p1Title'>
                         <h5>Obey Simon</h5>
+                        <p>HTML, CSS, JavaScript</p>
                     </div>
                     <div class='p1Buttons'>
-                        <a class="pBtn1 waves-effect waves-light btn" href="https://github.com/MichaelCraig7/SimonGame">Info</a>
+                        <a class="pBtn1 waves-effect waves-light btn" href="https://github.com/MichaelCraig7/SimonGame">GitHub</a>
                         <a class="pBtn2 waves-effect waves-light btn" href="http://obeysimon.bitballoon.com/">Live Site</a>
                     </div>
                     <img src="/project_images/p1_img.png" alt="Project 1 Image">
@@ -47,9 +48,10 @@
                 <div class='p2Inner'>
                     <div class='p2Title'>
                         <h5>Suspicion Tracker</h5>
+                        <p>HTML, CSS, JavaScript, Node.js, Express.js, HBS </p>
                     </div>
                     <div class='p2Buttons'>
-                        <a class="pBtn1 waves-effect waves-light btn" href="https://github.com/MichaelCraig7/suspicion-tracker">Info</a>
+                        <a class="pBtn1 waves-effect waves-light btn" href="https://github.com/MichaelCraig7/suspicion-tracker">GitHub</a>
                         <a class="pBtn2 waves-effect waves-light btn" href="https://evening-mesa-87101.herokuapp.com/">Live Site</a>
                     </div>
                     <img src="/project_images/p2_img.png" alt="Project 2 Image">
@@ -59,16 +61,31 @@
                 <div class='p3Inner'>
                     <div class='p3Title'>
                         <h5>Music List</h5>
+                        <p>HTML, CSS, JavaScript, React.js, Node.js, Express.js</p>
                     </div>
                     <div class='p3Buttons'>
-                        <a class="pBtn1 waves-effect waves-light btn" href="https://github.com/MichaelCraig7/MusicList">Info</a>
+                        <a class="pBtn1 waves-effect waves-light btn" href="https://github.com/MichaelCraig7/MusicList">GitHub</a>
                         <a class="pBtn2 waves-effect waves-light btn" href="https://p3musiclist.herokuapp.com/">Live Site</a>
                     </div>
                     <img src="/project_images/p3_img.png" alt="Project 3 Image">
                 </div>
             </div>
+            <div class='p4'>
+                <div class='p4Inner'>
+                    <div class='p4Title'>
+                        <h6>Current Project - Still in development</h6>
+                        <h5>Yu-Gi-Oh</h5>
+                        <p>HTML, CSS, JavaScript, React.js, Ruby on Rails</p>
+                    </div>
+                    <div class='p4Buttons'>
+                        <a class="pBtn1 waves-effect waves-light btn" href="https://github.com/MichaelCraig7/MusicList">GitHub</a>
+                        <!-- <a class="pBtn2 waves-effect waves-light btn" href="https://p3musiclist.herokuapp.com/">Live Site</a> -->
+                    </div>
+                    <img src="/project_images/p4_img.png" alt="Project 4 Image">
+                </div>
+            </div>
         </div>
-        <div id="infiniteLoopAlternate">
+        <!-- <div id="infiniteLoopAlternate">
             <div class='wave waveTop firstWave'></div>
             <div class="wave waveBottom firstWave"></div>
             <div class='wave waveTop secondWave'></div>
@@ -77,7 +94,7 @@
             <div class="wave waveBottom thirdWave"></div>
             <div class='wave waveTop fourthWave'></div>
             <div class="wave waveBottom fourthWave"></div>
-        </div>
+        </div> -->
 
 
     </div>
